# fdemon

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile.test  LICENSE  README.md  THIRD_PARTY_LICENSES.md  cliff.toml  docker-compose.test.yml  insta.yaml  install.sh
.zed/: debug.json
crates/fdemon-app/: Cargo.toml
crates/fdemon-app/.fdemon/: settings.local.toml
crates/fdemon-app/src/: actions.rs  confirm_dialog.rs  editor.rs  engine.rs  engine_event.rs  hyperlinks.rs  input_key.rs  lib.rs  log_view_state.rs  message.rs  plugin.rs  process.rs  session.rs  session_manager.rs  settings_items.rs  signals.rs  spawn.rs  state.rs
crates/fdemon-app/src/actions/: mod.rs  native_logs.rs  network.rs  performance.rs  ready_check.rs  session.rs  vm_service.rs
crates/fdemon-app/src/actions/inspector/: mod.rs  widget_tree.rs
crates/fdemon-app/src/config/: launch.rs  mod.rs  priority.rs  settings.rs  types.rs  vscode.rs  writer.rs
crates/fdemon-app/src/flutter_version/: mod.rs  state.rs  types.rs
crates/fdemon-app/src/handler/: daemon.rs  dap.rs  dap_backend.rs  devtools.rs  helpers.rs  keys.rs  log_view.rs  mod.rs  scroll.rs  session.rs  session_lifecycle.rs  settings.rs  settings_dart_defines.rs  settings_extra_args.rs  settings_handlers.rs  tests.rs  update.rs
crates/fdemon-app/src/handler/devtools/: debug.rs  inspector.rs  layout.rs  mod.rs  network.rs  performance.rs
crates/fdemon-app/src/handler/flutter_version/: actions.rs  mod.rs  navigation.rs
crates/fdemon-app/src/handler/new_session/: dart_defines_modal.rs  fuzzy_modal.rs  launch_context.rs  mod.rs  navigation.rs  target_selector.rs
crates/fdemon-app/src/ide_config/: emacs.rs  helix.rs  merge.rs  mod.rs  neovim.rs  vscode.rs  zed.rs
crates/fdemon-app/src/new_session_dialog/: device_groups.rs  mod.rs  state.rs  target_selector_state.rs  types.rs
crates/fdemon-app/src/services/: flutter_controller.rs  log_service.rs  state_service.rs
crates/fdemon-app/src/session/: block_state.rs  collapse.rs  debug_state.rs  handle.rs  log_batcher.rs  mod.rs  native_tags.rs  network.rs  performance.rs  session.rs  tests.rs
crates/fdemon-app/src/watcher/: mod.rs
crates/fdemon-core/: Cargo.toml
crates/fdemon-core/src/: ansi.rs  discovery.rs  error.rs  events.rs  exception_block.rs  lib.rs  logging.rs  network.rs  performance.rs  prelude.rs  stack_trace.rs  types.rs  widget_tree.rs
crates/fdemon-daemon/: Cargo.toml
crates/fdemon-daemon/src/: avds.rs  commands.rs  devices.rs  emulators.rs  flutter_locator.rs  lib.rs  process.rs  protocol.rs  simulators.rs  test_utils.rs  tool_availability.rs
crates/fdemon-daemon/src/flutter_sdk/: cache_scanner.rs  channel.rs  diagnostics.rs  locator.rs  mod.rs  types.rs  version_managers.rs  version_probe.rs  windows_tests.rs
crates/fdemon-daemon/src/native_logs/: android.rs  custom.rs  formats.rs  ios.rs  macos.rs  mod.rs
crates/fdemon-daemon/src/vm_service/: client.rs  debugger.rs  debugger_types.rs  errors.rs  extensions.rs  logging.rs  mod.rs  network.rs  performance.rs  protocol.rs  timeline.rs
crates/fdemon-daemon/src/vm_service/extensions/: dumps.rs  inspector.rs  layout.rs  mod.rs  overlays.rs
crates/fdemon-dap/: Cargo.toml
crates/fdemon-dap/src/: lib.rs  service.rs
crates/fdemon-dap/src/adapter/: backend.rs  breakpoints.rs  evaluate.rs  events.rs  handlers.rs  mod.rs  stack.rs  test_helpers.rs  threads.rs  types.rs  variables.rs
crates/fdemon-dap/src/adapter/tests/: adapter_core.rs  attach_threads.rs  backend_phase6.rs  breakpoint_locations.rs  breakpoint_persistence.rs  breakpoints.rs  call_service.rs  completions.rs  conditional_breakpoints.rs  custom_events.rs  evaluate_name.rs  events_logging.rs  exception_info.rs  exception_scope.rs  execution.rs  getter_evaluation.rs  hot_operations.rs  loaded_sources.rs  logpoints.rs  mod.rs  production_hardening.rs  progress_reporting.rs  request_timeouts_events.rs  restart_frame.rs  stack_scopes_variables.rs  time_budgets.rs  to_string_display.rs  update_debug_options.rs  variable_type_rendering.rs
crates/fdemon-dap/src/protocol/: codec.rs  mod.rs  types.rs
crates/fdemon-dap/src/server/: mod.rs  session.rs
crates/fdemon-dap/src/transport/: mod.rs  stdio.rs  tcp.rs
crates/fdemon-tui/: Cargo.toml
crates/fdemon-tui/src/: event.rs  layout.rs  lib.rs  runner.rs  selector.rs  startup.rs  terminal.rs  test_utils.rs
crates/fdemon-tui/src/render/: mod.rs  tests.rs
crates/fdemon-tui/src/render/snapshots/: fdemon_tui__render__tests__normal_initializing.snap  fdemon_tui__render__tests__normal_initializing.snap.new  fdemon_tui__render__tests__normal_reloading.snap  fdemon_tui__render__tests__normal_reloading.snap.new  fdemon_tui__render__tests__normal_running.snap  fdemon_tui__render__tests__normal_running.snap.new  fdemon_tui__render__tests__normal_stopped.snap  fdemon_tui__render__tests__normal_stopped.snap.new  flutter_demon__tui__render__tests__compact_device_selector.snap  flutter_demon__tui__render__tests__compact_normal.snap  flutter_demon__tui__render__tests__confirm_dialog_quit.snap  flutter_demon__tui__render__tests__confirm_dialog_quit_multiple.snap  flutter_demon__tui__render__tests__device_selector_with_devices.snap  flutter_demon__tui__render__tests__no_project_name.snap  flutter_demon__tui__render__tests__search_input_mode.snap
crates/fdemon-tui/src/theme/: icons.rs  mod.rs  palette.rs  styles.rs
crates/fdemon-tui/src/widgets/: confirm_dialog.rs  header.rs  mod.rs  modal_overlay.rs  search_input.rs  tabs.rs  tag_filter.rs
website/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Trunk.toml  build.rs  index.html  nginx.conf  tailwind.css
website/src/: data.rs  lib.rs  main.rs
website/src/components/: badge.rs  code_block.rs  diagrams.rs  footer.rs  icons.rs  mod.rs  navbar.rs  terminal_mockup.rs
website/src/pages/: home.rs  mod.rs
website/src/pages/docs/: architecture.rs  changelog.rs  configuration.rs  debugging.rs  devtools.rs  installation.rs  introduction.rs  keybindings.rs  mod.rs  native_logs.rs
website/tests/: changelog_gen.rs
(+1805 files in other folders)
