[package]
name = "flutter-demon"
version = "0.1.0"
edition = "2021"
description = "A high-performance TUI for Flutter development"
license = "MIT"

# Separate library and binary
[[bin]]
name = "fdemon"
path = "src/main.rs"

[lib]
name = "flutter_demon"
path = "src/lib.rs"

[dependencies]
# TUI Framework
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = "0.29"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
color-eyre = "0.6"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
dirs = "5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
