[package]
name = "flutter-demon"
version = "0.1.0"
edition = "2021"
description = "A high-performance TUI for Flutter development"
license = "BSL-1.1"

# Separate library and binary
[[bin]]
name = "fdemon"
path = "src/main.rs"

[lib]
name = "flutter_demon"
path = "src/lib.rs"

[dependencies]
# TUI Framework
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = "0.29"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error Handling
color-eyre = "0.6"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI parsing
clap = { version = "4", features = ["derive"] }

# Utilities
dirs = "5"
regex = "1"
rand = "0.8"

# File watching
notify = "7"
notify-debouncer-full = "0.4"

# Async trait helpers
trait-variant = "0.1"

# File locking
fs2 = "0.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

# E2E Testing
mockall = "0.13"
serial_test = "3"

# PTY-based TUI testing
expectrl = "0.7"           # PTY spawn and interaction

# Snapshot testing
insta = { version = "1.41", features = ["filters"] }
