[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSL-1.1"

[workspace.dependencies]
# Internal crate dependencies
fdemon-core = { path = "crates/fdemon-core" }
fdemon-daemon = { path = "crates/fdemon-daemon" }
fdemon-app = { path = "crates/fdemon-app" }
fdemon-tui = { path = "crates/fdemon-tui" }

# Shared external dependencies (deduplicate versions)
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "chrono"] }
tracing-appender = "0.2"
thiserror = "2"
regex = "1"
color-eyre = "0.6"

# TUI-specific
ratatui = { version = "0.30", features = ["all-widgets"] }
crossterm = "0.29"

# Config
toml = "0.8"
dirs = "5"
fs2 = "0.4"

# Async
trait-variant = "0.1"
notify = "7"
notify-debouncer-full = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Misc
rand = "0.8"

# Dev
tempfile = "3"
tokio-test = "0.4"
mockall = "0.13"
serial_test = "3"
expectrl = "0.7"
insta = { version = "1.41", features = ["filters"] }

# Root package (binary + lib during transition)
[package]
name = "flutter-demon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A high-performance TUI for Flutter development"

# The binary crate
[[bin]]
name = "fdemon"
path = "src/main.rs"

[dependencies]
# Internal workspace crates
fdemon-core.workspace = true
fdemon-daemon.workspace = true
fdemon-app.workspace = true
fdemon-tui.workspace = true

# CLI
clap.workspace = true

# Async
tokio.workspace = true

# Error handling
color-eyre.workspace = true

# Logging
tracing.workspace = true

# Headless mode dependencies
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
mockall.workspace = true
serial_test.workspace = true
expectrl.workspace = true
insta.workspace = true
regex.workspace = true
