[package]
name = "flutter-demon-website"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = "0.8"
leptos_router = "0.8"
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Clipboard", "Navigator", "Window"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
