[package]
name = "fdemon-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core domain types for Flutter Demon"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
regex.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
