[package]
name = "fdemon-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Flutter process management for Flutter Demon"

[features]
test-helpers = []

[dependencies]
fdemon-core.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
regex.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio-test.workspace = true
