[package]
name = "fdemon-dap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DAP (Debug Adapter Protocol) implementation for Flutter Demon"

[dependencies]
fdemon-core.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "sync", "macros"] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
trait-variant.workspace = true
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
